--- a/demo/index.html
+++ b/demo/index.html
@@ -29,6 +29,8 @@
             <option value="barcelona">Barcelona</option>
             <option value="valencia">Valencia</option>
         </gig-select>
+
+        <p>Prueba</p>
     </div>
 
 </body>
