--- a/demo/index.html
+++ b/demo/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
     <div class="field">
-        <gig-select label="Selecciona una ciudad">
+        <gig-select label="Selecciona una ciudad" multiple>
             <option value="malaga">Málaga</option>
             <option value="madrid">Madrid</option>
             <option value="barcelona">Barcelona</option>
