--- a/gig-select.html
+++ b/gig-select.html
@@ -1,6 +1,6 @@
 <!--
  Webcomponents to manage custom select
- @version v0.0.1 - 2015-08-19
+ @version v0.0.1 - 2015-12-04
  @link https://github.com/gigigo-html5/gig-select
  @author Pedro José Peña Jerez <pedro.jose@gigigo.com>
  @license MIT License, http://www.opensource.org/licenses/MIT
@@ -158,8 +158,19 @@
             <ul class$="[[showSelect]]">
                 <template is="dom-repeat" items="{{items}}">
                     <li on-click="selectItem" class$="[[itemClass(item, itemSelected)]]">
+                        <span class$="[[getClassIcon(item)]]"></span>
                         <span>{{item.label}}</span>
                         <i class="fa fa-check"></i>
+                    </li>
+                </template>
+                <template is="dom-if" if="[[selectAll]]">
+                    <li on-click="selectAllHandler">
+                        <template is="dom-if" if="[[!checkSelectAll]]">
+                            <span>[[selectAll]]</span>
+                        </template>
+                        <template is="dom-if" if="[[checkSelectAll]]">
+                            <span>[[unselectAll]]</span>
+                        </template>
                     </li>
                 </template>
             </ul>
@@ -252,6 +263,16 @@
                     }
 
                 },
+                selectAllHandler : function() {
+
+                    if (!this.checkSelectAll) {
+                        this.arrayItemsSelected = this.items;
+                    } else {
+                        this.arrayItemsSelected = [];
+                    }
+                    this.checkSelectAll = !this.checkSelectAll;
+                    this._changeArrayValues();
+                },
                 clickItem: function() {
                     this.showSelect = 'show';
 
@@ -269,6 +290,18 @@
                     }
 
                     return className;
+
+                },
+                getClassIcon: function(item) {
+
+                    for (var i = 0; i < item.attributes.length; i++) {
+                        var attr = item.attributes[i];
+
+                        if (attr.name === 'icon') {
+                            return attr.value;
+                        }
+
+                    }
 
                 },
                 getClassItem: function(errorMessage, disabled) {
@@ -293,15 +326,21 @@
                     object.label = '';
                     object.value = '';
 
-                    for (var i = 0; i < this.arrayItemsSelected.length; i++) {
-                        object.label += this.arrayItemsSelected[i].label+', ';
-                        object.value += this.arrayItemsSelected[i].value+', ';
+                    if (!this.arrayItemsSelected.length) {
+                        this.itemSelected = null;
+                    } else {
+
+                        for (var i = 0; i < this.arrayItemsSelected.length; i++) {
+                            object.label += this.arrayItemsSelected[i].label+',';
+                            object.value += this.arrayItemsSelected[i].value+',';
+                        }
+
+                        object.label = object.label.substring(0, object.label.length - 1);
+                        object.value = object.value.substring(0, object.value.length - 1);
+
+                        this.itemSelected = object;
+
                     }
-
-                    object.label = object.label.substring(0, object.label.length - 2);
-                    object.value = object.value.substring(0, object.value.length - 2);
-
-                    this.itemSelected = object;
 
                 },
                 _changeValue : function(value) {
@@ -333,6 +372,10 @@
                         value: ''
                     },
                     disabled: {
+                        type: Boolean,
+                        value: false
+                    },
+                    checkSelectAll: {
                         type: Boolean,
                         value: false
                     }
