--- a/gig-select.html
+++ b/gig-select.html
@@ -1,6 +1,6 @@
 <!--
  Webcomponents to manage custom select
- @version v0.0.1 - 2015-12-10
+ @version v0.0.2 - 2015-12-12
  @link https://github.com/gigigo-html5/gig-select
  @author Pedro José Peña Jerez <pedro.jose@gigigo.com>
  @license MIT License, http://www.opensource.org/licenses/MIT
@@ -8,6 +8,14 @@
 <link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="../iron-overlay-behavior/iron-overlay-backdrop.html">
 <link rel="stylesheet" href="../components-font-awesome/css/font-awesome.css">
+<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js"></script>
+<script>
+  WebFont.load({
+    google: {
+      families: ['Roboto:300,400']
+    }
+  });
+</script>
 
 <dom-module id="gig-select">
 
@@ -15,7 +23,7 @@
 
         * {
             box-sizing: border-box;
-            font-family: sans-serif;
+            font-family: Roboto, sans-serif;
         }
 
         ::content option {
@@ -30,7 +38,8 @@
             height: 36px;
             padding: 6px 27px 6px 15px;
             line-height: 1.57142857;
-            font-family: sans-serif;
+            font-family: Roboto, sans-serif;
+            font-weight: 300;
             font-size: 14px;
             color: var(--input-color-text, #76838f);
             background-color: var(--select-background-color, white);
@@ -104,6 +113,7 @@
             cursor: pointer;
             font-size: 14px;
             position:relative;
+            font-weight: 300;
         }
 
         .select li:hover {
