--- a/gig-select.html
+++ b/gig-select.html
@@ -1,6 +1,6 @@
 <!--
  Webcomponents to manage custom select
- @version v0.0.2 - 2015-12-12
+ @version v0.0.3 - 2015-12-13
  @link https://github.com/gigigo-html5/gig-select
  @author Pedro José Peña Jerez <pedro.jose@gigigo.com>
  @license MIT License, http://www.opensource.org/licenses/MIT
@@ -49,6 +49,16 @@
             cursor: pointer;
             position:relative;
             width: 100%;
+            -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+            box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+        }
+
+        .select .placeholder {
+            color: var(--select-color-placeholder, #a3afb7);
+        }
+
+        .select .item:hover .placeholder {
+            color: var(--select-color-placeholder, white);
         }
 
         .select .item:hover {
@@ -161,7 +171,7 @@
         <div class="select">
             <div on-click="clickItem" class$="[[getClassItem(errorMessage, disabled)]]">
                 <span>{{itemSelected.label}}</span>
-                <span hidden$="[[itemSelected]]">[[label]]</span>
+                <span class="placeholder" hidden$="[[itemSelected]]">[[label]]</span>
 
                 <i class="fa fa-angle-down"></i>
             </div>
